--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,2 +1,4 @@
 <h3>Welcome</h3>
 <p><%= link_to 'Users:', users_path %> <%= User.count %> registered</p>
+<p><%= link_to 'Log in', new_user_session_path %></p>
+<p><%= link_to 'Log out', destroy_user_session_path, method: :delete %></p>
