--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,2 +1,10 @@
 <%# add navigation links to this file %>
-<li class='nav-item'><%= link_to 'Movies', movies_path, class: 'nav-link' %></li>
+<li><%= link_to 'Movies', movies_path, class: 'nav-link' %></li>
+
+<li>
+  <% if current_user %>
+    <%= link_to "Log Out", destroy_user_session_path, method: :delete, class: 'nav-link' %>
+  <% else %>
+    <%= link_to "Log In", new_user_session_path, class: 'nav-link' %>
+  <% end %>
+</li>
