--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,25 +1,31 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Movies</h1>
+<div class="container">
+  <div class="row">
+    <h1>Movies <%= link_to 'New Movie', new_movie_path, class: 'pull-right btn btn-primary' %></h1>
 
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th></th>
+          <th></th>
+          <th></th>
+        </tr>
+      </thead>
 
-  <tbody>
-    <% @movies.each do |movie| %>
-      <tr>
-        <td><%= link_to 'Show', movie %></td>
-        <td><%= link_to 'Edit', edit_movie_path(movie) %></td>
-        <td><%= link_to 'Destroy', movie, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+      <tbody>
+        <% @movies.each do |movie| %>
+          <tr>
+            <td><%= link_to "#{movie.title}", movie %></td>
+<!--             <td><%= link_to 'Edit', edit_movie_path(movie) %></td>
+            <td><%= link_to 'Destroy', movie, method: :delete, data: { confirm: 'Are you sure?' } %></td> -->
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
 
-<br>
+    <br>
 
-<%= link_to 'New Movie', new_movie_path %>
+  </div>
+</div>
