--- a/gulp/assets/stylesheets/base/_colors.scss
+++ b/gulp/assets/stylesheets/base/_colors.scss
@@ -6,12 +6,13 @@ $black: #000;
 $gray: #666666;
 
 // Brand colors
-$brand-pink: #FF4081;
-$brand-yellow: #FFF9C4;
+$brand-brown: #8D6E63;
+$brand-maroon: #C51162;
 $brand-light-purple: #E8EAF6;
+$brand-medium-purple: #A4B1FA;
+$brand-dark-purple: #52587F;
 
 
-$brand-dark-gray: #333333;
-$brand-medium-gray: #808080;
-$brand-light-gray: #E6E6E6;
+$brand-dark-gray: #A4A5AD;
+$brand-light-gray: #D4D6E0;
 
