--- a/gulp/assets/stylesheets/base/_globals.scss
+++ b/gulp/assets/stylesheets/base/_globals.scss
@@ -1,21 +1,15 @@
 // Global styles go here
 
 body {
-  // Set 100 as the global font weight to use the light
-  // Museo Sans font that we have.
-  font-weight: 100;
-  background-color: $brand-pink;
+  background-color: $brand-light-purple;
 }
-// apply styles to HTML elements
-// to make views framework-neutral
+
 main {
-  background-color: #fff;
+  background-color: $brand-light-purple;
   width: 100%;
-  padding: 0; // necessary for full-width color backgrounds
+  padding: 0;
 }
 
-
-// Make all images responsive by default
 img {
   @extend .img-responsive;
   margin: 0 auto;
@@ -23,4 +17,9 @@ img {
 
 p {
   font-size: $main-font-size;
+  color: $brand-maroon
+}
+
+h1, h2, h3, h4 {
+  color: $brand-brown;
 }
